--- a/analyze/index.html
+++ b/analyze/index.html
@@ -1,3 +1,12 @@
-<DOCTYPE><html><heal><tite><meta>head><body>
-<p>Chapter 1, Analyze, Correct, Improve<dr>
-<P>HTML stands for Hyperlink Makes Learning fun.<p><p>You use presentation software to create HTML pages.</p<PHTML9 is the latest version of HTML.</p>HTML is rendered within the desktop of an operating system.</BODY>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
