Chapter 1 Finished Analyze

--- a/analyze/index.html
+++ b/analyze/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
+    <meta charset="utf-8">
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<p>Jayden Griffith, Feb 20 2024</p>
+<p>Chapter 1 Analyze Correct</p>
+<hr>
+<p>HTML, stands for hypertext markup language</p>
+<p> You use a text editor to crrate HTML, pages</p>
+<P> HTML 5.2 is the latest version of HTML</P>
+<p> HTML, is rendered in a browser, such as microsoft edge, google chrome, firefox, opera, or safari</p>
 </body>
 </html>
