--- a/extend/index.html
+++ b/extend/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
  <head>
     <title>CH 1 Extend Your Knowledge</title>
-    <meta charset="UTF-8'>
+    <meta charset="UTF-8">
 <title>index</title>
 </head>
 <body>
